@@ -1,14 +1,17 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
+# Stage 1: Build
+FROM gradle:8.3.3-jdk17 AS build
+
 COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
 
-FROM openjdk:8-jre-slim
+RUN gradle build --no-daemon
+
+# Stage 2: Runtime
+FROM openjdk:17-jre-slim
 
 EXPOSE 8080
-
 RUN mkdir /app
 
 COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseContainerSupport", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app/spring-boot-application.jar"]
